[package]
name = "anki_direct"
version = "0.1.0"
authors = ["aramrw <aramitsa@gmail.com>"]
description = "A Simple Rust library for AnkiConnect API"
license = "MIT"
homepage = "https://github.com/aramrw/anki_direct"
repository = "https://github.com/aramrw/anki_direct"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
