[package]
name = "anki_direct"
version = "0.0.12"
authors = ["aramrw <aramitsa@gmail.com>"]
description = "A Simple Rust library for AnkiConnect API"
license = "MIT"
homepage = "https://github.com/aramrw/anki_direct"
repository = "https://github.com/aramrw/anki_direct"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

thiserror = "2.0.12"
num-traits = "0.2.19"
derive_builder = "0.20.2"
indexmap = { version = "2.7.1", features = ["rayon", "serde"] }
serde_with = { version = "3.13.0", features = ["base64"] }

base64 = { version = "0.22.1" }
url = "2.5.4"
getset = "0.1.6"
derive-where = "1.5.0"
rayon = "1.10.0"

[profile.test]
debug = true
[profile.release]
debug = true

[features]
cache = []
serde = []
